--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "images/php-alpine-oci8"]
 	path = images/php-alpine-oci8
 	url = git@github.com:wonhyo/php-alpine-oci8.git
+	branch = php7
