--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,7 +23,7 @@ services:
         nofile:
           soft: 20000
           hard: 40000
-      user: $DOCKER_USER
+      user: "1000:1000"
       volumes:
          - ./logs:/var/log/nginx
          - ./run:/var/run
@@ -39,7 +39,7 @@ services:
         nofile:
           soft: 20000
           hard: 40000
-      user: $DOCKER_USER
+      user: "1000:1000"
       volumes:
          - ./config/php/php-fpm.d:/usr/local/etc/php-fpm.d
          - ./logs:/usr/local/var/log
