add support podman compose

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,22 +7,15 @@ x-oracle_network:
            ./config/oracle-instanceclient/network:/usr/lib/oracle/21/client64/lib/network
 services:
    memcached:
-      image: memcached
-      ulimits:
-        nproc: 65535
-        nofile:
-          soft: 20000
-          hard: 40000
+      image: docker.io/memcached
       restart: unless-stopped
    nginx:
-      image: nginx:alpine
+      depends_on:
+         - php
+         - memcached
+      image: docker.io/nginx:alpine
       ports:
-         - "80:80"
-      ulimits:
-        nproc: 65535
-        nofile:
-          soft: 20000
-          hard: 40000
+         - "8080:8080"
       user: "1000:1000"
       volumes:
          - ./logs:/var/log/nginx
@@ -34,11 +27,6 @@ services:
       restart: unless-stopped
    php:
       build: images/php-alpine-oci8
-      ulimits:
-        nproc: 65535
-        nofile:
-          soft: 20000
-          hard: 40000
       user: "1000:1000"
       volumes:
          - ./config/php/php-fpm.d:/usr/local/etc/php-fpm.d
