fix php-fpm slow

--- a/config/php/php-fpm.d/docker.conf
+++ b/config/php/php-fpm.d/docker.conf
@@ -1,4 +1,5 @@
 [global]
+daemonize = no
 error_log = /proc/self/fd/2
 
 ; https://github.com/docker-library/php/pull/725#issuecomment-443540114
@@ -13,3 +14,21 @@ clear_env = no
 ; Ensure worker stdout and stderr are sent to the main error log.
 catch_workers_output = yes
 decorate_workers_output = no
+
+listen = 9000
+pm = dynamic
+pm.max_children = 500
+pm.start_servers = 30
+pm.min_spare_servers = 30
+pm.max_spare_servers = 70
+pm.max_requests = 3000
+pm.process_idle_timeout = 5s
+php_value[upload_max_filesize] = 60M
+php_value[post_max_size] = 60M
+php_value[memory_limit] = 3072M
+php_value[session.save_handler] = memcache
+php_value[session.save_path] = 'memcached:11211'
+php_value[max_execution_time] = 300
+request_slowlog_timeout = 3s
+slowlog = /usr/local/var/log/www-slow.log
+php_value[date.timezone] = 'Asia/Bangkok'
