--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,11 +5,18 @@ x-extra_hosts:
 x-oracle_network:
    &oracle_network
            ./config/oracle-instanceclient/network:/usr/lib/oracle/21/client64/lib/network
+x-local_time:
+   &local_time
+           "/etc/localtime:/etc/localtime:ro" 
 services:
    memcached:
+     #container_name: memcached
       image: docker.io/memcached
       restart: unless-stopped
+      volumes:
+         - *local_time   
    nginx:
+     #container_name: nginx
       depends_on:
          - php
          - memcached
@@ -18,18 +25,19 @@ services:
          - "8080:8080"
       user: "1000:1000"
       volumes:
+         - *local_time
          - ./logs:/var/log/nginx
          - ./run:/var/run
          - ./cache:/var/cache/nginx
          - ./config/nginx/conf.d:/etc/nginx/conf.d
          - ./app:/var/www/html
-         - "/etc/localtime:/etc/localtime:ro"
-      extra_hosts: *default-extra_hosts
       restart: unless-stopped
    php:
+     #container_name: php
       build: images/php-alpine-oci8
       user: "1000:1000"
       volumes:
+         - *local_time
          - ./config/php/php-fpm.d:/usr/local/etc/php-fpm.d
          - ./logs:/usr/local/var/log
          - ./app:/var/www/html
