--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,3 @@
-version: '3.7'
 x-extra_hosts:
    &default-extra_hosts
       - "mysql:192.168.1.20"
@@ -10,13 +9,13 @@ x-local_time:
       "/etc/localtime:/etc/localtime:ro" 
 services:
    memcached:
-     #container_name: project_A_memcached
+      container_name: project_A_memcached
       image: docker.io/memcached
       restart: unless-stopped
       volumes:
          - *local_time   
    nginx:
-     #container_name: project_A_nginx
+      container_name: project_A_nginx
       depends_on:
          - php
          - memcached
@@ -33,7 +32,7 @@ services:
          - ./app:/var/www/html
       restart: unless-stopped
    php:
-     #container_name: project_A_php
+      container_name: project_A_php
       build: images/php-alpine-oci8
       user: "1000:1000"
       volumes:
